# biorobotics-2026-mujoco-public

./: .gitignore  .gitmodules  open_mjmodel_interactive.py  pyproject.toml  ratio_pid_challenge.py  ratio_pid_guided.py  readme.md  run_model.py
mujoco_envs/: __init__.py  custom_env.py
mujoco_envs/xml/simple_arm/: elbow.xml
