[project]
name = "biorobotics-2026-mujoco"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "mujoco>=3.3.0",
    "gymnasium>=0.29.1",
    "myosuite>=2.11.6",
    "ipython",
    "jupyterlab",
    "matplotlib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mujoco_envs"]